# fastapi-com-tdd-dio-lab

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
store/: main.py
store/controllers/: product.py
store/models/: base.py
store/schemas/: product.py
store/usecases/: product.py
tdd_project/: pyproject.toml
tests/: conftest.py
tests/controllers/: test_products.py
tests/schemas/: test_product.py
tests/schemas/usecases/: test_product.py
